tempfile/derive_more/tests/compile_fail/display/mutlifield_struct_without_attribute.rs
#[derive(derive_more::Display)]
pub struct Foo {
    foo: String,
    bar: String,
}

fn main() {}
